ontwikkelingen + advies toegevoegd

--- a/Portfolio/portfolio/src/app/analyse_security_engineer/leerontwikkelingpt1/leerontwikkelingpt1.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/leerontwikkelingpt1/leerontwikkelingpt1.component.html
@@ -1,5 +1,6 @@
 <body class="body"> 
 <div class="content">
+    <h1>Persoonlijke ontwikkeling Oktober</h1>
     <h2>Reflectie</h2>
     <p>Het verschil tussen wat ik begreep over security bij het begin van de minor en nu is erg groot. Ik heb meer geleerd over hoe je security moet aanpassen en hoe je het moet opzoeken. </p>
     <p>Ook een verschil is de verandering in onderzoek dat ik nu doe. Het is nu automatisch meer gefocust op security dan dat het eerst was. Eerst keek ik naar wat het handigst was voor het project maar nu kijk ik ook nog of het wel veilig genoeg is of er veiligere alternatieve zijn. Deze verandering zorgt er nu voor dat ik eerder veiligere opties pak dan makkelijkere opties.</p>
@@ -10,7 +11,14 @@
     <p>Ik ben tot nu toe goed bezig geweest met het toepassen van security. Ik heb ook meer geleerd over security en waarom het zo belangrijk is dan dat ik voor de minor kende. Ik weet echter op het moment nog niet alles over security zoals op het gebied van command injection. Om deze reden zal ik hierin nog wat onderzoek moeten toepassen. </p>
     <p>In verband met communicatie vind ik dat ik het goed doe. Ik hoe regelmatig contact met Stephan Vrijssen. Een puntje dat nog beter kan is dat ik wat vaker contact opneem met Casper om door mijn portfolio door te kijken.</p>
     <p>Al in al ben ik goed bezig maar er zijn nog een paar puntjes waar verbetering in mag komen zoals het documenteren van technische skills en deze in de portfolio zetten</p> 
+<br>
 
-<p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+    <h1>Persoonlijke ontwikkeling Januari</h1>
+    <div id="januari"></div>
+    <h2>Overal Evualatie</h2>
+    <p>Het is het einde van het semester en mijn beeld sinds oktober is weinig veranderd. Hetgene wat echter wel is veranderd is dat ik nu meer let op of je bepaalde data kan gebruiken. Daarnaast als ik nu denk over het maken van een applicatie denk ik nu eerst aan hoe ik het op een goede manier kan beveiligingen. Laats had ik nog gedacht over het maken van een website en het eerste waar ik aan dacht was hoe ik dit keer betere brute-force implementaties kan toepassen.</p>
+    <p>Als ik kijk naar het begin van het semester en nu merk ik vooral op dat ik meer oplet op beveiliging en hoe ik het beter kan beveiligen. Daarnaast heb ik nu meer kennis over de GDPR en hoe dit je als een security engineer kan beinvloeden.</p>
+    <p>Al in al ben ik erg tevreden over wat ik heb geleerd dit semester en ben ik zeker dat ik dit ook zal toepassen in de opkomende semesters.</p>
+<p><br><br><br><br><br><br><br><br><br><br></p>
 </div>
 </body>
