--- a/Portfolio/portfolio/src/app/analyse_security_engineer/rsa/rsa.component.html
+++ b/Portfolio/portfolio/src/app/analyse_security_engineer/rsa/rsa.component.html
@@ -1,3 +1,4 @@
+<body class="body">
 <div class="content">
 <h2>RSA Encryptie / Decryptie Calculatie</h2>
 <p>In dit hoofdstuk zal ik een calculatie uitvoeren om de RSA te encrypten en berekenen.</p>
@@ -85,3 +86,4 @@
     <br>D(C) = 148 ^ 93 (mod 391) = 65
     <br>65 back to a letter is the letter A.</p>
 </div>
+</body>
