--- a/Portfolio/portfolio/src/app/leerplanning/leerplanning.component.html
+++ b/Portfolio/portfolio/src/app/leerplanning/leerplanning.component.html
@@ -30,22 +30,22 @@
     <tr>
       <td class="tableNumber"><p>2.</p></td>
       <td><p>Onderzoek security engineering banen en documenteer</p></td>
-      <td><p><a href="/jobs">Resultaat</a></p></td>
+      <td><p><a href="/jobs"style="color: #007bff;">Resultaat</a></p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>3.</p></td>
       <td><p>Het maken van een abuse case van de R&D project</p></td>
-      <td><p><a href="/analyse#misuse">Resultaat</a></p></td>
+      <td><p><a href="/analyse#misuse"style="color: #007bff;">Resultaat</a></p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>4.</p></td>
       <td><p>Bestudeer en implementeer standaard security principes.</p></td>
-      <td><p><a href="/analyse">Resultaat</a></p></td>
+      <td><p><a href="/analyse"style="color: #007bff;">Resultaat</a></p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>5.</p></td>
       <td><p>Leer syntax en de opties van regular expressions en pas deze toe op een test-applicatie.</p></td>
-      <td><p><a href="/implementatie#regularExpressions">Resultaat</a></p></td>
+      <td><p><a href="/implementatie#regularExpressions"style="color: #007bff;">Resultaat</a></p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>6.</p></td>
@@ -59,29 +59,29 @@
       <td><p>
         Implementeer data encryptie op applicatie level code. Documenteer welke encryptie, waarom de encryptie, waarom niet de andere encryptie, hoe je het hebt geïmplementeerd en een voorbeeld.
         </p></td>
-      <td><p><a href="/implementatie#encryptie">Resultaat</a></p></td>
+      <td><p><a href="/implementatie#encryptie"style="color: #007bff;">Resultaat</a></p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>8.</p></td>
       <td ><p>Leer de basis van RSA public cryptography. Maak een document/link naar cryptografie en bestudeer dit en documenteer de vindingen.</p></td>
-      <td><p><a href="/rsa">Resultaat</a></p></td>
+      <td><p><a href="/rsa"style="color: #007bff;">Resultaat</a></p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>9.</p></td>
       <td><p> Voeg security logging toe aan de applicatie, implementatie en tests.      </p></td>
-      <td><p><a href="/implementatie#logging">Resultaat</a></p></td>
+      <td><p><a href="/implementatie#logging"style="color: #007bff;">Resultaat</a></p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>10. </p></td>
       <td><p>Maak gebruik van een static code review analysis tool </p></td>
-      <td><p><a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing">Resultaat</a> </p></td>
+      <td><p><a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>11. </p></td>
       <td><p>
         Bestudeer de code van een open source app. Voeg hierop static code analyse als handmatige analyse.
          </p></td>
-      <td><p><a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing">Resultaat</a> </p></td>
+      <td><p><a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>12. </p></td>
@@ -92,7 +92,7 @@
     <tr>
       <td class="tableNumber"><p>13. </p></td>
       <td><p>Voeg fuzzing testen toe voor een applicatie die jij aan het ontwikkelen bent, bijvoorbeeld unit testen. Doe dit vooral met de focus op buffer overflow en 'Denial of Service' problemen </p></td>
-      <td><p>Gedeeltelijk gedaan. Heb niet de tijd gehad om het erin te implementeren maar heb wel onderzoek ernaar gedaan.<a href="/fuzzy">Resultaat</a> </p></td>
+      <td><p>Gedeeltelijk gedaan. Heb niet de tijd gehad om het erin te implementeren maar heb wel onderzoek ernaar gedaan.<a href="/fuzzy"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>14. </p></td>
@@ -104,19 +104,24 @@
         , implement tde security controls
         , test tde security controls by developing test cases for tde tdreats. Add fuzzing tests
          </p></td>
-      <td><p><a href="/analyse">Resultaat</a> </p></td>
+      <td><p><a href="/analyse"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>15. </p></td>
       <td><p>Pick an IT application or service to develop to be able to learn and apply all security engineering aspects. Pick an application tdat needs security and tdat could be an actual operational environment, e.g. a CTF platform, an information system for a SOC, a web platform tdats stores sensitive or confidential data, etc. Give a general description of tde application in your portfolio: main functionality, users and user groups, global system architecture.
         Install one or more server in your personal seclab account for development and testing of tdis very secure application. tdis server environment will be used for tde Red Team - Blue Team event where tde security of your application is tested (Red Team) and monitored (Blue Team).
          </p></td>
-      <td><p><a href="/analyse">Resultaat</a> </p></td>
+      <td><p><a href="/analyse"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>16. </p></td>
       <td><p>Bestudeer database beveiliging       </p></td>
-      <td><p><a href="/implementatie#data">Resultaat</a> </p></td>
+      <td><p><a href="/implementatie#data"style="color: #007bff;">Resultaat</a> </p></td>
+    </tr>
+    <tr>
+      <td class="tableNumber"><p>17. </p></td>
+      <td><p>Help je mede studenten met hun applicatie </p></td>
+      <td><p><a href="/leerplanning#advies"style="color: #007bff;">Advies</a> dat ik de studenten heb gegeven </p></td>
     </tr>
   </table>
    <p>Red Team Vs Blue </p>
@@ -129,7 +134,7 @@
     <tr>
       <td class="tableNumber"><p>2. </p></td>
       <td><p>Noteer feedback en fix bugs die zijn gevonden bij de applicatie </p></td>
-      <td><p><a routerLink="/redblue1"> event 1 </a> en <a routerLink="/redblue2"> event 2 </a> </p></td>
+      <td><p><a routerLink="/redblue1" style="color: #007bff;"> event 1 </a> en <a routerLink="/redblue2"style="color: #007bff;"> event 2 </a> </p></td>
     </tr>
   </table>
  <p>Persoonlijke ontwikkeling</p>
@@ -137,12 +142,12 @@
   <tr>
     <td><p>1.</p></td>
     <td><p>Persoonlijke ontwikkeling Oktober</p></td>
-    <td><p><a href="/ontwikkeling1">Resultaat</a></td>
+    <td><p><a href="/ontwikkeling1"style="color: #007bff;">Resultaat</a></td>
   </tr>
   <tr>
   <td><p>2.</p></td>
   <td><p>Persoonlijke ontwikkeling Januari</p></td>
-  <td><p><a href="/ontwikkeling2">Not yet implemented</a></p></td>
+  <td><p><a href="/ontwikkeling1"style="color: #007bff;">Resultaat</a></p></td>
 </tr>
 </table>
   <p>Onderzoek van interesses in verband met security engineering</p>
@@ -150,24 +155,34 @@
     <tr>
       <td class="tableNumber"><p>1. </p></td>
       <td><p> Onderzoek fuzzy tests. </p></td>
-      <td><p><a routerLink="/fuzzy">Resultaat</a> </p></td>
+      <td><p><a routerLink="/fuzzy"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>2. </p></td>
       <td><p>Onderzoek logging. </p></td>
-      <td><p> </p><a routerLink="/logging">Resultaat</a></td>
+      <td><p><a routerLink="/logging"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>3. </p></td>
       <td><p>Onderzoek XSS. </p></td>
-      <td><p><a routerLink="/xss">Resultaat</a> </p></td>
+      <td><p><a routerLink="/xss"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
     <tr>
       <td class="tableNumber"><p>4. </p></td>
       <td><p>Implementeer het CAPTCHA mechanisme. </p></td>
-      <td><p> </p><a href="/implementatie#captcha">Resultaat</a></td>
+      <td><p><a href="/implementatie#captcha"style="color: #007bff;">Resultaat</a> </p></td>
     </tr>
    
   </table>
+
+  <h2>Advies gegeven aan andere studenten</h2>
+  <div id="advies"></div>
+  <p>Ik heb tijdens dit semester mijn groep lichtelijk geholpen. Ik heb niet samen gezeten met een van de studenten en dan gekeken naar hun problemen. 
+    In plaats daarvan heb ik bronnen voor hun problemen naar hun toegestuurd.
+     Thomas had bijvoorbeeld problemen met het kiezen van welke Logging hij in zijn systeem wilde toepassen en ik had hem dan geholpen door een paar
+      verschillende bronnen naar hem te sturen zodat hij een beter beeld kreeg. Daarnaast heb ik ook een paar keer in de code gekeken en dan hier en 
+      daar een paar foutjes eruit gehaald.<br><br><br><br><br><br></p>
+  
 </div>
+
 </body>
