--- a/Portfolio/portfolio/src/app/rand-dproject/rand-dproject.component.html
+++ b/Portfolio/portfolio/src/app/rand-dproject/rand-dproject.component.html
@@ -3,18 +3,18 @@
         <h1>R&D project</h1>
         <p>Voor ons project moesten we een corona teststraat maken. Hiernaast zouden we twee afstudeerders helpen als beveiligingsadviseurs. In onze corona teststraat zouden we de applicaties
             van afstudeerders verwerken. Dit zouden we dan laten zien als een demo. In het begin hadden we wat communicatie problemen tussen ons en de stakeholders waardoor we het verkeerde idee hadden gekregen. Hierdoor hebben we meerdere keren onze documentatie 
-            moeten aanpassen waaronder <a href="https://docs.google.com/document/d/1t9f5cSS--y_WvgxXQeprG2W3b-Re9NmHNk6nNllZfIw/edit?usp=sharing">het projectplan</a> , 
-            <a href="https://docs.google.com/document/d/1yk5n4Yj9kjR-9-WKnhYO98QI7yxeWz-bLtfJAzsk4wk/edit?usp=sharing">de threat analyse </a>, <a href="https://docs.google.com/document/d/1--_mFkktQ-q5VhOhaNy1_9H52aZbSxOtgiPS39__9vY/edit"> Ethische analyse</a>  en designs. </p>
+            moeten aanpassen waaronder <a href="https://docs.google.com/document/d/1t9f5cSS--y_WvgxXQeprG2W3b-Re9NmHNk6nNllZfIw/edit?usp=sharing" style="color: #007bff;">het projectplan</a> , 
+            <a href="https://docs.google.com/document/d/1yk5n4Yj9kjR-9-WKnhYO98QI7yxeWz-bLtfJAzsk4wk/edit?usp=sharing"style="color: #007bff;">de threat analyse </a>, <a href="https://docs.google.com/document/d/1--_mFkktQ-q5VhOhaNy1_9H52aZbSxOtgiPS39__9vY/edit" style="color: #007bff;"> Ethische analyse</a>  en designs. </p>
         <p>Ik heb dit project ,ondanks de tegenslagen die we in het begin hadden, erg informatief gevonden. Ik ben daarna ook erg tevreden geweest met de groep waar ik mee werkte. Deze groep vond het leuk om dingen op te zoeken waardoor ik veel heb kunnen leren over security. 
             Ook al is het eindresultaat dat we leveren niet was zoals we hadden gehoopt heb ik toch veel geleerd en kijk ik op een security manier naar applicaties. </p>
-            <p>Tijdens het project hebben we peerreviews over elkaar geschreven. deze kan je  <a routerLink="/peerreview" routerLinkActive="active">hier</a> vinden. De peerreviews beschrijven wat mijn teamgenoten van mij vonden.</p>
+            <p>Tijdens het project hebben we peerreviews over elkaar geschreven. deze kan je  <a routerLink="/peerreview" routerLinkActive="active" style="color: #007bff;">hier</a> vinden. De peerreviews beschrijven wat mijn teamgenoten van mij vonden.</p>
             <p>We hebben gebruik gemaakt van korte sprints waar we aan het eind van de sprint een nieuw product geven aan de stakeholders om erover te discussieren. Hiernaast maakte we gebruik van retroperspectief en scrumboards.</p>
   
 
         <h2>Sprint 1</h2>
        
         <p>We zijn in sprint 1 begonnen met het helpen van de afgestudeerden. De manier hoe we hun hielpen was door hun documentatie te bekijken. Nadat we hun documentatie hadden bekeken hadden we een document voor elke afstudeerder gemaakt en hierin geschreven wat we dachten dat verbeterd kon worden.
-           Dit hebben we later in sprint 3 in nette adviesrapporten gezet. Zie <a href="https://docs.google.com/document/d/1h_Wv_CtU8eflT1v-lLCDrhT6v5dmo4Q2XFvASn_huXs/edit?usp=sharing">Dungs adviesrapport</a> of <a href="https://docs.google.com/document/d/1M5oFP1thWkSo5qBQXRCuoyNKXXtWS5LJtRnPtfEmMUY/edit?usp=sharing">Zhichengs adviesrapport</a>    
+           Dit hebben we later in sprint 3 in nette adviesrapporten gezet. Zie <a href="https://docs.google.com/document/d/1h_Wv_CtU8eflT1v-lLCDrhT6v5dmo4Q2XFvASn_huXs/edit?usp=sharing" style="color: #007bff;">Dungs adviesrapport</a> of <a href="https://docs.google.com/document/d/1M5oFP1thWkSo5qBQXRCuoyNKXXtWS5LJtRnPtfEmMUY/edit?usp=sharing" style="color: #007bff;">Zhichengs adviesrapport</a>    
         </p>
 
         <p>Tijdens sprint 1 hebben we ook gewerkt aan het maken van ontwerpen/ security designs. Deze designs waren gemaakt op verzoek van Stephan en Casper. Wij hebben op deze tekeningen feedback gevraagd en hier zijn de eindresultaten</p>
@@ -24,14 +24,14 @@
     <img src="../../assets/img/Dataflow.JPG" alt="Dataflow"style="height: 500px;">
     <p>EntityRelationDiagram gemaakt door michel en thomas</p>
     <img src="../../assets/img/EntityRelationDiagram.png" alt="ERD"style="height: 500px;">
-        <p>Aan het eind van de sprint hadden we een retroperspectief. Hieruit bleek dat we goed met elkaar konden communiceren maar wel snel afgeleid raakten. Verder bleek t ook dat we soms te lang over een onderwerp discussieerde. We zijn toen weze brainstormen en hebben elkaar toen <a routerLink="/rollen" routerLinkActive="active">rollen</a> gegeven. We hoopten dat we met deze rollen de negatieve punten van het retroperspectief konden verbeteren.
-           Het maken van de <a routerLink="/rollen" routerLinkActive="active">rollen</a> heeft er zeker voor gezorgd dat we beter hebben kunnen werken.</p>
+        <p>Aan het eind van de sprint hadden we een retroperspectief. Hieruit bleek dat we goed met elkaar konden communiceren maar wel snel afgeleid raakten. Verder bleek t ook dat we soms te lang over een onderwerp discussieerde. We zijn toen weze brainstormen en hebben elkaar toen <a routerLink="/rollen" routerLinkActive="active"style="color: #007bff;">rollen</a> gegeven. We hoopten dat we met deze rollen de negatieve punten van het retroperspectief konden verbeteren.
+           Het maken van de <a routerLink="/rollen" routerLinkActive="active" style="color: #007bff;">rollen</a> heeft er zeker voor gezorgd dat we beter hebben kunnen werken.</p>
     <img src="../../assets/img/sprint1_retro1.jpg" style="height:700px; margin: 0px;" >
     <img src="../../assets/img/sprint1_retro2.jpg" style="height:700px; margin: 0px;">
         <h2>Sprint 2</h2>
         <p>In de tweede sprint hebben we gefocust op 3 dingen: Het maken van een demo met de applicaties van de afgestudeerde, het maken van 
-            <a href="https://drive.google.com/file/d/1HrYJ5QicPOfYLJ0ITLbRMPTQHjrOboHR/view?usp=sharing">een research document over het  BSN </a>
-             en het maken van een document met als doel  <a href="https://docs.google.com/document/d/1vW0xZwIpekxgk9s8n-XwXrK-2mied9QujRa56Ozhfug/edit?usp=sharing">hoe je het best een mysql database kan beveiligin.</a></p>
+            <a href="https://drive.google.com/file/d/1HrYJ5QicPOfYLJ0ITLbRMPTQHjrOboHR/view?usp=sharing"style="color: #007bff;">een research document over het  BSN </a>
+             en het maken van een document met als doel  <a href="https://docs.google.com/document/d/1vW0xZwIpekxgk9s8n-XwXrK-2mied9QujRa56Ozhfug/edit?usp=sharing"style="color: #007bff;">hoe je het best een mysql database kan beveiligin.</a></p>
             
         <p>Ons idee van een demo ging was om een controle bij een evenement te zetten waar mensen worden gecheckt op hun kaart en hun resultaat van een covidtest.<br>
             1. Als een persoon negatief was getest en een geldig kaartje had was het toegestaan om naar binnen te gaan. <br>
@@ -48,7 +48,7 @@
         <p>Al in al waren de stakeholders blij met ons idee maar ze hadden wel wat kritiek. Ze vonden bijvoorbeeld dat de teststraat beter ergens anders dan bij het evenement kon zitten. Dan zouden de personen 1 a 2 dagen van te voren naar de teststraat komen om hun test uit te voeren. Hierdoor zouden er minder besmette mensen bij het evenement kunnen komen.    
         </p>
         <p>Er was daarnaast nog een vraag of het mogelijk was om het BSN nummer te koppeken aan de testresultaten van een persoon. Hiervoor moesten we een geldige reden hebben en moest er dus wat extra onderzoek  worden gedaan.</p>
-        <p>Het plan werd om voor sprint 3 alle <a href="https://docs.google.com/document/d/18Olb_B-Rw6X4LIXbRMr9iXAwtFrk2vgCR1dxBRMWx_o/edit?usp=sharing">misuse scenarios </a> op te schrijven, onderzoek naar het bsn nummer hebben gedaan en onderzoek naar een MySQL database te doen. 
+        <p>Het plan werd om voor sprint 3 alle <a href="https://docs.google.com/document/d/18Olb_B-Rw6X4LIXbRMr9iXAwtFrk2vgCR1dxBRMWx_o/edit?usp=sharing"style="color: #007bff;">misuse scenarios </a> op te schrijven, onderzoek naar het bsn nummer hebben gedaan en onderzoek naar een MySQL database te doen. 
         Ook werd er van ons nog steeds verwacht om de afstudeerders te helpen met security advies. Persoonlijk was ik veel bezig samen met Kristian aan het BSN onderzoek.</p>
         <p>Tijdens het retroperspectief van sprint twee hadden we een paar dingen op aan te merken. De demo hadden we veel te veel moeite in gestopt vooral op het software gedeelte. Dit was onnodig en gaf ook onnodig stress. Dit zouden we voortaan niet meer doen.
             Het tweede gedeelte was dat mensen steeds vaker afgeleid raakten. Ik moest hier wat strenger in worden en iedereen was het daarmee eens. Het laatste puntje was dat het handig was geweest als we van te voren naar de stakeholders zouden hebben gestuurd wat we zouden bespreken met onze documenten. Hierdoor hadden we een wat efficientere manier alles kunnen bespreken. Afgezien van deze drie punten was de rest goed verlopen en was iedereen tevreden.
@@ -58,7 +58,7 @@
         <h2>Sprint 3</h2>
         <p>De grootste tijd van sprint 3 hebben wij gewerkt aan de misuse scenarios, het bsn en mysql onderzoek. Het bsn research hebben we besproken met Stephan en daarna doorgestuurd naar de Juridische hoge school. De feedback die wij ervan terug kregen hadden we geimplementeerd.De mysql research is gemaakt door Michel, Thomas, Youri en Alexander. Ik en Kristian hebben dat samen met de rest nagecheckt. Daarna zijn we met zijn alle aan de 
             misuse scenarios begonnen. Dit hebben we meerdere dagen over gedaan voordat we ermee klaar waren.</p>
-        <p>Na jet afmaken van de belangrijkste taken zijn we begonnen met <a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing" >code analyse </a>. We hebben zowel handmatige code analyse gedaan als gebruik gemaakt van sonarqube. Hiervan hebben we documenten gemaakt en deze doorgestuurd naar de afstudeerders.
+        <p>Na jet afmaken van de belangrijkste taken zijn we begonnen met <a href="https://docs.google.com/document/d/1shM2MOdc-nw2Y24INjYZx9XkTNN15y23_YiYJiL_UEY/edit?usp=sharing"style="color: #007bff;" >code analyse </a>. We hebben zowel handmatige code analyse gedaan als gebruik gemaakt van sonarqube. Hiervan hebben we documenten gemaakt en deze doorgestuurd naar de afstudeerders.
         </p>
         <img src="../../assets/img/staticcodeanalyse.PNG" style="height:700px">
         
